// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <App /> add new tab 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test-name="mario-tab"
        id="react-tabs-2"
        role="tab"
        tabindex="0"
      >
        Tab
        <button
          data-test-name="mario-tab-delete"
          type="button"
        >
          remove tab
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-3"
      role="tabpanel"
    >
      Content tab
    </div>
  </div>,
  <button
    data-test-name="mario-tab-add"
    type="button"
  >
    Add tab
  </button>,
]
`;

exports[`test <App /> add new tab 2`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test-name="mario-tab"
        id="react-tabs-2"
        role="tab"
        tabindex="0"
      >
        Tab
        <button
          data-test-name="mario-tab-delete"
          type="button"
        >
          remove tab
        </button>
      </li>
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test-name="mario-tab"
        id="react-tabs-4"
        role="tab"
      >
        Tab
        <button
          data-test-name="mario-tab-delete"
          type="button"
        >
          remove tab
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-3"
      role="tabpanel"
    >
      Content tab
    </div>
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel"
      id="react-tabs-5"
      role="tabpanel"
    />
  </div>,
  <button
    data-test-name="mario-tab-add"
    type="button"
  >
    Add tab
  </button>,
]
`;

exports[`test <App /> render default tabs 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test-name="mario-tab"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        Tab
        <button
          data-test-name="mario-tab-delete"
          type="button"
        >
          remove tab
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      Content tab
    </div>
  </div>,
  <button
    data-test-name="mario-tab-add"
    type="button"
  >
    Add tab
  </button>,
]
`;
